--- a/paper.bib
+++ b/paper.bib
@@ -1,59 +1,46 @@
-@article{Pearson:2017,
-  	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
-  	Archiveprefix = {arXiv},
-  	Author = {{Pearson}, S. and {Price-Whelan}, A.~M. and {Johnston}, K.~V.},
-  	Eprint = {1703.04627},
-  	Journal = {ArXiv e-prints},
-  	Keywords = {Astrophysics - Astrophysics of Galaxies},
-  	Month = mar,
-  	Title = {{Gaps in Globular Cluster Streams: Pal 5 and the Galactic Bar}},
-  	Year = 2017
-}
-
-@book{Binney:2008,
-  	url = {http://adsabs.harvard.edu/abs/2008gady.book.....B},
-  	Author = {{Binney}, J. and {Tremaine}, S.},
-  	Booktitle = {Galactic Dynamics: Second Edition, by James Binney and Scott Tremaine.~ISBN 978-0-691-13026-2 (HB).~Published by Princeton University Press, Princeton, NJ USA, 2008.},
-  	Publisher = {Princeton University Press},
-  	Title = {{Galactic Dynamics: Second Edition}},
-  	Year = 2008
-}
-
-@article{gaia,
-    author = {{Gaia Collaboration}},
-    title = "{The Gaia mission}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1609.04153},
-    primaryClass = "astro-ph.IM",
-    keywords = {space vehicles: instruments, Galaxy: structure, astrometry, parallaxes, proper motions, telescopes},
-    year = 2016,
-    month = nov,
-    volume = 595,
-    doi = {10.1051/0004-6361/201629272},
-    url = {http://adsabs.harvard.edu/abs/2016A%26A...595A...1G},
-}
-
-@article{astropy,
-    author = {{Astropy Collaboration}},
-    title = "{Astropy: A community Python package for astronomy}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1307.6212},
-    primaryClass = "astro-ph.IM",
-    keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
-    year = 2013,
-    month = oct,
-    volume = 558,
-    doi = {10.1051/0004-6361/201322068},
-    url = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A}
-}
-
-@misc{fidgit,
-  author = {A. M. Smith and K. Thaney and M. Hahnel},
-  title = {Fidgit: An ungodly union of GitHub and Figshare},
+@article{ROM-net,
+  author = {Daniel, T. and Casenave, F. and Akkari, N. and Ryckelynck, D.},
+  title = {Model order reduction assisted by deep neural networks ({ROM}-net)},
+  journal = {Adv. Model. and Simul. in Eng. Sci.},
   year = {2020},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  url = {https://github.com/arfon/fidgit}
+  volume = {7},
+  pages = {},
+  number = {16},
+  abstract = {},
+  issn = {},
+  keywords = {}
 }
+
+
+@Article{mca26010017,
+AUTHOR = {Daniel, T. and Casenave, F. and Akkari, N. and Ryckelynck, D.},
+TITLE = {Data Augmentation and Feature Selection for Automatic Model Recommendation in Computational Physics},
+JOURNAL = {Math. Comput. Appl.},
+VOLUME = {26},
+YEAR = {2021},
+NUMBER = {1},
+ARTICLE-NUMBER = {17},
+ISSN = {2297-8747}
+}
+
+
+
+@article{UQindustrialDesign,
+title={Uncertainty quantification for industrial design using dictionaries of reduced order models}, 
+author={Daniel, T. and Casenave, F. and Akkari, N. and Ryckelynck, D. and Rey, C.},
+year={2021},
+journal={arXiv preprint: 2108.04012},
+primaryClass={stat.ML}
+}
+
+
+@Unpublished{datatargetVAE,
+title={Data-targetted prior distribution for Variational AutoEncoders}, 
+author={Akkari, N. and Casenave, F. and Daniel, T. and Ryckelynck, D.},
+note={submitted}
+}
+
+
+
+
+
