--- a/paper.bib
+++ b/paper.bib
@@ -37,6 +37,7 @@ primaryClass={stat.ML}
 @Unpublished{datatargetVAE,
 title={Data-targetted prior distribution for Variational AutoEncoders}, 
 author={Akkari, N. and Casenave, F. and Daniel, T. and Ryckelynck, D.},
+year = {2021},
 note={submitted}
 }
 
