papier premiere version

--- a/paper.bib
+++ b/paper.bib
@@ -12,7 +12,7 @@
 }
 
 
-@Article{mca26010017,
+@article{mca26010017,
 AUTHOR = {Daniel, T. and Casenave, F. and Akkari, N. and Ryckelynck, D.},
 TITLE = {Data Augmentation and Feature Selection for Automatic Model Recommendation in Computational Physics},
 JOURNAL = {Math. Comput. Appl.},
@@ -24,24 +24,86 @@ ISSN = {2297-8747}
 }
 
 
-
 @article{UQindustrialDesign,
-title={Uncertainty quantification for industrial design using dictionaries of reduced order models}, 
-author={Daniel, T. and Casenave, F. and Akkari, N. and Ryckelynck, D. and Rey, C.},
-year={2021},
-journal={arXiv preprint: 2108.04012},
-primaryClass={stat.ML}
+	title = {Uncertainty quantification for industrial numerical simulation using dictionaries of reduced order models},
+  author = {Daniel, T. and Casenave, F. and Akkari, N. and Ryckelynck, D. and Rey, C.},
+	journal = {Mechanics \& Industry},
+	year = {2022},
+	volume = {23},
+	pages = {3}
 }
 
 
-@Unpublished{datatargetVAE,
+@article{datatargetVAE,
 title={Data-targetted prior distribution for Variational AutoEncoders}, 
 author={Akkari, N. and Casenave, F. and Daniel, T. and Ryckelynck, D.},
+journal = {Fluids},
+volume = {6},
 year = {2021},
-note={submitted}
+number = {10},
+article-number = {343}
 }
 
 
+@incollection{nardoni,
+  title = {{A R\&D software platform for shape and topology optimization using body-fitted meshes}},
+  author = {Nardoni, C. and Danan, D. and Mang, C. and Bordeu, F. and Cortial, J.},
+  booktitle = {{SEMA-SIMAI Springer Series}},
+  year = {2021},
+  hal_id = {hal-03358972},
+  hal_version = {v1},
+}
 
 
+@software{pymicro,
+  author = {Proudhon, H.},
+  title = {pymicro},
+  year = {2013-present},
+  url = {\url{https://github.com/heprom/pymicro}}
+}
 
+
+@software{cgns,
+  title = {{CFD General Notation System}},
+  url = {\url{http://cgns.github.io/}},
+  year = {1994-present},
+  note = {Accessed: 2022-02-15}
+}
+
+
+@software{meshio,
+author = {Schlömer, N.},
+license = {MIT},
+year = {2015-present},
+title = {{meshio: Tools for mesh files}},
+url = {https://github.com/nschloe/meshio}
+}
+
+
+@article{freefempp,
+author = {Hecht, F.},
+title = {New development in freefem++},
+journal = {Journal of Numerical Mathematics},
+number = {3-4},
+volume = {20},
+year = {2012},
+pages = {251--266}
+}
+
+
+@article{fenics,
+  title={The {FEniCS} project version 1.5},
+  author={Aln{\ae}s, M. and Blechta, J. and Hake, J. and Johansson, A. and Kehlet, B. and Logg, A. and Richardson, C. and Ring, J. and Rognes, M.E. and Wells, G.N.},
+  journal={Archive of Numerical Software},
+  volume={3},
+  number={100},
+  year={2015}
+}
+
+
+@software{zset,
+author = {Mines ParisTech and ONERA the French aerospace lab},
+year = {1981-present},
+title = {{Zset: nonlinear material & structure analysis suite.}},
+url = {http://www.zset-software.com}
+}
