--- a/paper.bib
+++ b/paper.bib
@@ -35,7 +35,7 @@ ISSN = {2297-8747}
 
 
 @article{datatargetVAE,
-title={Data-targetted prior distribution for Variational AutoEncoders}, 
+title={Data-targetted prior distribution for Variational AutoEncoders},
 author={Akkari, N. and Casenave, F. and Daniel, T. and Ryckelynck, D.},
 journal = {Fluids},
 volume = {6},
@@ -106,4 +106,27 @@ author = {Mines ParisTech and ONERA the French aerospace lab},
 year = {1981-present},
 title = {{Zset: nonlinear material & structure analysis suite.}},
 url = {http://www.zset-software.com}
+}
+
+@book{VTK4,
+  author={Will Schroeder and Ken Martin and Bill Lorensen},
+  title={{The Visualization Toolkit--An Object-Oriented Approach To 3D
+                  Graphics}},
+  publisher={Kitware, Inc.},
+  edition={Fourth},
+  year={2006}
+}
+
+@article{sullivan2019pyvista,
+  doi = {10.21105/joss.01450},
+  url = {https://doi.org/10.21105/joss.01450},
+  year = {2019},
+  month = {may},
+  publisher = {The Open Journal},
+  volume = {4},
+  number = {37},
+  pages = {1450},
+  author = {C. Bane Sullivan and Alexander Kaszynski},
+  title = {{PyVista}: 3D plotting and mesh analysis through a streamlined interface for the Visualization Toolkit ({VTK})},
+  journal = {Journal of Open Source Software}
 }
